# 3am-devops

./: .gitignore  AI_INSTRUCTIONS.md  DEMO_GUIDE.md  FINAL_COMPLETION_REPORT.md  GIT_WORKFLOW.md  README.md  command.md  meta_imp.md  pyproject.toml  realityPlan.md  scaffold.py  trackA.md  trackB.md  whatBhasdone.md
incident-env/: .dockerignore  Cargo.toml  Dockerfile  HACKATHON_SUBMISSION_COMPLETE.md  Makefile  README.md  TRACK_B_COMPLETION_SUMMARY.md  bootstrap.ps1  eval_report.json  inference.py  openenv.yaml  pyproject.toml  tasks.py  test_phase5.py  validate_phase5.py
incident-env/.github/: copilot-instructions.md
incident-env/api/: __init__.py  main.py
incident-env/checkpoints/: checkpoint_epoch_10_level_1.pt  checkpoint_epoch_20_level_1.pt  latest.pt
incident-env/dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
incident-env/dashboard/src/: App.jsx  index.css  main.jsx
incident-env/engine/: Cargo.toml
incident-env/engine/src/: lib.rs  (+3 more)
incident-env/envs/: __init__.py  incident_env.py  openenv_env.py  openenv_models.py  scenarios.py
incident-env/graders/: __init__.py  llm_grader.py  programmatic.py
incident-env/rewards/: __init__.py  blast_radius.py  composite.py  false_alarm.py  mttr.py
incident-env/server/: __init__.py  app.py
incident-env/tests/: mock_env.py  test_api_runtime.py  test_backtest.py  test_env.py  test_graders.py  test_pipeline_integrity.py  test_reality_mode.py  test_rewards.py  test_scenarios.py  test_smoke.py
incident-env/training/: __init__.py  backtest.py  curriculum.py  eval.py  train.py
(+29 files in other folders)
