[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "engine/Cargo.toml"
module-name = "incident_core"


[project]
name = "incident-env"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openenv", "torch", "torchrl", "tensordict", "gymnasium", "numpy",
    "fastapi", "uvicorn", "websockets", "ollama", "pydantic"
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "tensorboard"]
